feature: add filters on game
